# agents-benchmarks

./: .gitignore  README.md  benchmark.py  trans_Gemma3_(12B).ipynb
python-langgraph-benchmark/src/: main.py  models.py  tools.py  workflow.py
rust-graphflow-benchmark/: Cargo.toml
rust-graphflow-benchmark/src/: main.rs  models.rs
rust-graphflow-benchmark/src/tasks/: mod.rs  question_extractor.rs  reporter.rs  researcher.rs  summarizer.rs
rust-graphflow-benchmark/src/tools/: llm.rs  mod.rs  tavily.rs
