[package]
name = "rust-graphflow-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
graph-flow = { path = "../../rs-inter-task/graph-flow", features = ["rig"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
rig-core = { version = "0.13.0", features = ["derive"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[dev-dependencies]
criterion = "0.5"